--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,15 @@
 #    uv pip compile requirements.in --output-file=requirements.txt
 aiohappyeyeballs==2.4.4
     # via aiohttp
-aiohttp==3.11.10
+aiohttp==3.11.11
     # via
     #   langchain
     #   langchain-community
-aiosignal==1.3.1
+aiosignal==1.3.2
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anthropic==0.40.0
+anthropic==0.42.0
     # via langchain-anthropic
 anyio==4.7.0
     # via
@@ -21,13 +21,13 @@ asgiref==3.8.1
     # via
     #   django
     #   django-allauth
-attrs==24.2.0
+attrs==24.3.0
     # via aiohttp
 beautifulsoup4==4.12.3
     # via
     #   -r requirements.in
     #   deep-translator
-blis==0.7.11
+blis==1.1.0
     # via thinc
 cached-property==2.0.1
     # via genanki
@@ -38,7 +38,7 @@ catalogue==2.0.10
     #   spacy
     #   srsly
     #   thinc
-certifi==2024.8.30
+certifi==2024.12.14
     # via
     #   httpcore
     #   httpx
@@ -47,11 +47,11 @@ cffi==1.17.1
     # via cryptography
 chardet==5.2.0
     # via -r requirements.in
-charset-normalizer==3.4.0
+charset-normalizer==3.4.1
     # via requests
 chevron==0.14.0
     # via genanki
-click==8.1.7
+click==8.1.8
     # via
     #   nltk
     #   typer
@@ -83,7 +83,7 @@ django==5.1.4
     #   -r requirements.in
     #   django-allauth
     #   django-extensions
-django-allauth==65.3.0
+django-allauth==65.3.1
     # via -r requirements.in
 django-extensions==3.2.3
     # via -r requirements.in
@@ -103,7 +103,7 @@ frozenlist==1.5.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2024.10.0
+fsspec==2024.12.0
     # via huggingface-hub
 genanki==0.13.1
     # via -r requirements.in
@@ -114,7 +114,7 @@ google-api-core==2.24.0
     #   google-ai-generativelanguage
     #   google-api-python-client
     #   google-generativeai
-google-api-python-client==2.155.0
+google-api-python-client==2.157.0
     # via google-generativeai
 google-auth==2.37.0
     # via
@@ -131,14 +131,20 @@ googleapis-common-protos==1.66.0
     # via
     #   google-api-core
     #   grpcio-status
-grpcio==1.68.1
+googletrans==4.0.2
+    # via -r requirements.in
+grpcio==1.69.0
     # via
     #   google-api-core
     #   grpcio-status
-grpcio-status==1.68.1
+grpcio-status==1.69.0
     # via google-api-core
 h11==0.14.0
     # via httpcore
+h2==4.1.0
+    # via httpx
+hpack==4.0.0
+    # via h2
 httpcore==1.0.7
     # via httpx
 httplib2==0.22.0
@@ -148,6 +154,7 @@ httplib2==0.22.0
 httpx==0.27.2
     # via
     #   anthropic
+    #   googletrans
     #   langchain-mistralai
     #   langsmith
     #   ollama
@@ -156,15 +163,17 @@ httpx-sse==0.4.0
     # via
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.26.5
+huggingface-hub==0.27.0
     # via tokenizers
+hyperframe==6.0.1
+    # via h2
 idna==3.10
     # via
     #   anyio
     #   httpx
     #   requests
     #   yarl
-jinja2==3.1.4
+jinja2==3.1.5
     # via spacy
 jiter==0.8.2
     # via
@@ -176,15 +185,15 @@ jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
     # via jsonpatch
-langchain==0.3.11
+langchain==0.3.14
     # via
     #   -r requirements.in
     #   langchain-community
-langchain-anthropic==0.3.0
+langchain-anthropic==0.3.1
     # via -r requirements.in
-langchain-community==0.3.11
+langchain-community==0.3.14
     # via -r requirements.in
-langchain-core==0.3.24
+langchain-core==0.3.29
     # via
     #   -r requirements.in
     #   langchain
@@ -194,17 +203,17 @@ langchain-core==0.3.24
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.0.6
+langchain-google-genai==2.0.7
     # via -r requirements.in
-langchain-mistralai==0.2.3
+langchain-mistralai==0.2.4
     # via -r requirements.in
-langchain-openai==0.2.12
+langchain-openai==0.2.14
     # via -r requirements.in
-langchain-text-splitters==0.3.2
+langchain-text-splitters==0.3.4
     # via langchain
 langcodes==3.5.0
     # via spacy
-langsmith==0.2.3
+langsmith==0.2.10
     # via
     #   langchain
     #   langchain-community
@@ -221,7 +230,7 @@ markupsafe==3.0.2
     # via
     #   jinja2
     #   werkzeug
-marshmallow==3.23.1
+marshmallow==3.23.3
     # via dataclasses-json
 mdurl==0.1.2
     # via markdown-it-py
@@ -247,13 +256,13 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.4.4
+ollama==0.4.5
     # via -r requirements.in
-openai==1.57.2
+openai==1.59.3
     # via
     #   -r requirements.in
     #   langchain-openai
-orjson==3.10.12
+orjson==3.10.13
     # via langsmith
 packaging==24.2
     # via
@@ -275,7 +284,7 @@ proto-plus==1.25.0
     # via
     #   google-ai-generativelanguage
     #   google-api-core
-protobuf==5.29.1
+protobuf==5.29.2
     # via
     #   google-ai-generativelanguage
     #   google-api-core
@@ -283,7 +292,7 @@ protobuf==5.29.1
     #   googleapis-common-protos
     #   grpcio-status
     #   proto-plus
-psutil==6.1.0
+psutil==6.1.1
     # via -r requirements.in
 pyasn1==0.6.1
     # via
@@ -295,7 +304,7 @@ pybind11==2.13.6
     # via fasttext
 pycparser==2.22
     # via cffi
-pydantic==2.10.3
+pydantic==2.10.4
     # via
     #   -r requirements.in
     #   anthropic
@@ -313,9 +322,9 @@ pydantic==2.10.3
     #   spacy
     #   thinc
     #   weasel
-pydantic-core==2.27.1
+pydantic-core==2.27.2
     # via pydantic
-pydantic-settings==2.6.1
+pydantic-settings==2.7.1
     # via langchain-community
 pygments==2.18.0
     # via rich
@@ -323,7 +332,7 @@ pyjwt==2.10.1
     # via -r requirements.in
 pyopenssl==24.3.0
     # via -r requirements.in
-pyparsing==3.2.0
+pyparsing==3.2.1
     # via httplib2
 python-dotenv==1.0.1
     # via pydantic-settings
@@ -368,7 +377,7 @@ six==1.17.0
     # via
     #   ebooklib
     #   transliterate
-smart-open==7.0.5
+smart-open==7.1.0
     # via weasel
 sniffio==1.3.1
     # via
@@ -378,7 +387,7 @@ sniffio==1.3.1
     #   openai
 soupsieve==2.6
     # via beautifulsoup4
-spacy==3.7.5
+spacy==3.8.3
     # via -r requirements.in
 spacy-legacy==3.0.12
     # via spacy
@@ -401,7 +410,7 @@ tenacity==9.0.0
     #   langchain
     #   langchain-community
     #   langchain-core
-thinc==8.2.5
+thinc==8.3.3
     # via spacy
 tiktoken==0.8.0
     # via langchain-openai
@@ -439,7 +448,7 @@ unidecode==1.3.8
     # via -r requirements.in
 uritemplate==4.1.1
     # via google-api-python-client
-urllib3==2.2.3
+urllib3==2.3.0
     # via requests
 wasabi==1.1.3
     # via
