--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -21,11 +21,11 @@ annotated-types==0.7.0
     # via
     #   -r requirements.txt
     #   pydantic
-anthropic==0.42.0
+anthropic==0.43.1
     # via
     #   -r requirements.txt
     #   langchain-anthropic
-anyio==4.7.0
+anyio==4.8.0
     # via
     #   -r requirements.txt
     #   anthropic
@@ -71,7 +71,7 @@ beautifulsoup4==4.12.3
     #   nbconvert
 bleach==6.2.0
     # via nbconvert
-blis==1.1.0
+blis==0.7.11
     # via
     #   -r requirements.txt
     #   thinc
@@ -148,7 +148,7 @@ cryptography==44.0.0
     # via
     #   -r requirements.txt
     #   pyopenssl
-cymem==2.0.10
+cymem==2.0.11
     # via
     #   -r requirements.txt
     #   preshed
@@ -158,7 +158,7 @@ dataclasses-json==0.6.7
     # via
     #   -r requirements.txt
     #   langchain-community
-debugpy==1.8.11
+debugpy==1.8.12
     # via ipykernel
 decorator==5.1.1
     # via ipython
@@ -178,7 +178,7 @@ distro==1.9.0
     #   -r requirements.txt
     #   anthropic
     #   openai
-django==5.1.4
+django==5.1.5
     # via
     #   -r requirements.txt
     #   django-allauth
@@ -186,7 +186,7 @@ django==5.1.4
     #   django-extensions
 django-allauth==65.3.1
     # via -r requirements.txt
-django-debug-toolbar==4.4.6
+django-debug-toolbar==5.0.1
     # via -r requirements.dev.in
 django-extensions==3.2.3
     # via -r requirements.txt
@@ -202,7 +202,7 @@ executing==2.1.0
     # via
     #   icecream
     #   stack-data
-faker==33.3.0
+faker==33.3.1
     # via -r requirements.dev.in
 fastjsonschema==2.21.1
     # via nbformat
@@ -236,7 +236,7 @@ genanki==0.13.1
     # via -r requirements.txt
 ghp-import==2.1.0
     # via mkdocs
-google-ai-generativelanguage==0.6.10
+google-ai-generativelanguage==0.6.15
     # via
     #   -r requirements.txt
     #   google-generativeai
@@ -246,7 +246,7 @@ google-api-core==2.24.0
     #   google-ai-generativelanguage
     #   google-api-python-client
     #   google-generativeai
-google-api-python-client==2.157.0
+google-api-python-client==2.159.0
     # via
     #   -r requirements.txt
     #   google-generativeai
@@ -262,7 +262,7 @@ google-auth-httplib2==0.2.0
     # via
     #   -r requirements.txt
     #   google-api-python-client
-google-generativeai==0.8.3
+google-generativeai==0.8.4
     # via
     #   -r requirements.txt
     #   langchain-google-genai
@@ -273,7 +273,7 @@ googleapis-common-protos==1.66.0
     #   grpcio-status
 googletrans==4.0.2
     # via -r requirements.txt
-griffe==1.5.4
+griffe==1.5.5
     # via mkdocstrings-python
 grpcio==1.69.0
     # via
@@ -320,7 +320,7 @@ httpx-sse==0.4.0
     #   -r requirements.txt
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.27.0
+huggingface-hub==0.27.1
     # via
     #   -r requirements.txt
     #   tokenizers
@@ -328,9 +328,9 @@ hyperframe==6.0.1
     # via
     #   -r requirements.txt
     #   h2
-icecream==2.1.3
+icecream==2.1.4
     # via -r requirements.dev.in
-identify==2.6.5
+identify==2.6.6
     # via pre-commit
 idna==3.10
     # via
@@ -427,15 +427,15 @@ jupyter-server-terminals==0.5.3
     # via jupyter-server
 jupyterlab-pygments==0.3.0
     # via nbconvert
-langchain==0.3.14
+langchain==0.3.15
     # via
     #   -r requirements.txt
     #   langchain-community
-langchain-anthropic==0.3.1
+langchain-anthropic==0.3.3
     # via -r requirements.txt
-langchain-community==0.3.14
+langchain-community==0.3.15
     # via -r requirements.txt
-langchain-core==0.3.29
+langchain-core==0.3.31
     # via
     #   -r requirements.txt
     #   langchain
@@ -445,13 +445,13 @@ langchain-core==0.3.29
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.0.7
+langchain-google-genai==2.0.9
     # via -r requirements.txt
 langchain-mistralai==0.2.4
     # via -r requirements.txt
-langchain-openai==0.2.14
+langchain-openai==0.3.1
     # via -r requirements.txt
-langchain-text-splitters==0.3.4
+langchain-text-splitters==0.3.5
     # via
     #   -r requirements.txt
     #   langchain
@@ -459,7 +459,7 @@ langcodes==3.5.0
     # via
     #   -r requirements.txt
     #   spacy
-langsmith==0.2.10
+langsmith==0.2.11
     # via
     #   -r requirements.txt
     #   langchain
@@ -497,7 +497,7 @@ markupsafe==3.0.2
     #   mkdocstrings
     #   nbconvert
     #   werkzeug
-marshmallow==3.23.3
+marshmallow==3.25.1
     # via
     #   -r requirements.txt
     #   dataclasses-json
@@ -523,7 +523,7 @@ mkdocs==1.6.1
     #   mkdocs-awesome-pages-plugin
     #   mkdocs-material
     #   mkdocstrings
-mkdocs-autorefs==1.2.0
+mkdocs-autorefs==1.3.0
     # via
     #   mkdocstrings
     #   mkdocstrings-python
@@ -531,7 +531,7 @@ mkdocs-awesome-pages-plugin==2.10.1
     # via -r requirements.dev.in
 mkdocs-get-deps==0.2.0
     # via mkdocs
-mkdocs-material==9.5.49
+mkdocs-material==9.5.50
     # via -r requirements.dev.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
@@ -546,7 +546,7 @@ multidict==6.1.0
     #   -r requirements.txt
     #   aiohttp
     #   yarl
-murmurhash==1.0.11
+murmurhash==1.0.12
     # via
     #   -r requirements.txt
     #   preshed
@@ -561,7 +561,7 @@ mypy-extensions==1.0.0
     #   typing-inspect
 natsort==8.4.0
     # via mkdocs-awesome-pages-plugin
-nbclassic==1.1.0
+nbclassic==1.2.0
     # via notebook
 nbclient==0.10.2
     # via nbconvert
@@ -597,13 +597,13 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.4.5
+ollama==0.4.6
     # via -r requirements.txt
-openai==1.59.3
+openai==1.59.9
     # via
     #   -r requirements.txt
     #   langchain-openai
-orjson==3.10.13
+orjson==3.10.15
     # via
     #   -r requirements.txt
     #   langsmith
@@ -646,7 +646,7 @@ pluggy==1.5.0
     # via
     #   allure-python-commons
     #   pytest
-pre-commit==4.0.1
+pre-commit==4.1.0
     # via -r requirements.dev.in
 preshed==3.0.9
     # via
@@ -657,7 +657,7 @@ prometheus-client==0.21.1
     # via
     #   jupyter-server
     #   notebook
-prompt-toolkit==3.0.48
+prompt-toolkit==3.0.50
     # via
     #   ipython
     #   jupyter-console
@@ -671,7 +671,7 @@ proto-plus==1.25.0
     #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-core
-protobuf==5.29.2
+protobuf==5.29.3
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
@@ -707,7 +707,7 @@ pycparser==2.22
     # via
     #   -r requirements.txt
     #   cffi
-pydantic==2.10.4
+pydantic==2.10.5
     # via
     #   -r requirements.txt
     #   anthropic
@@ -733,7 +733,7 @@ pydantic-settings==2.7.1
     # via
     #   -r requirements.txt
     #   langchain-community
-pygments==2.18.0
+pygments==2.19.1
     # via
     #   -r requirements.txt
     #   icecream
@@ -753,12 +753,12 @@ pylint-django==2.6.1
     # via -r requirements.dev.in
 pylint-plugin-utils==0.8.2
     # via pylint-django
-pymdown-extensions==10.13
+pymdown-extensions==10.14
     # via
     #   -r requirements.dev.in
     #   mkdocs-material
     #   mkdocstrings
-pyopenssl==24.3.0
+pyopenssl==25.0.0
     # via -r requirements.txt
 pyparsing==3.2.1
     # via
@@ -816,7 +816,7 @@ pyzmq==26.2.0
     #   jupyter-console
     #   jupyter-server
     #   notebook
-referencing==0.35.1
+referencing==0.36.1
     # via
     #   jsonschema
     #   jsonschema-specifications
@@ -866,13 +866,13 @@ rsa==4.9
     # via
     #   -r requirements.txt
     #   google-auth
-selenium==4.27.1
+selenium==4.28.0
     # via -r requirements.dev.in
 send2trash==1.8.3
     # via
     #   jupyter-server
     #   notebook
-setuptools==75.6.0
+setuptools==75.8.0
     # via
     #   -r requirements.txt
     #   fasttext
@@ -908,7 +908,7 @@ soupsieve==2.6
     # via
     #   -r requirements.txt
     #   beautifulsoup4
-spacy==3.8.3
+spacy==3.7.5
     # via -r requirements.txt
 spacy-legacy==3.0.12
     # via
@@ -918,7 +918,7 @@ spacy-loggers==1.0.5
     # via
     #   -r requirements.txt
     #   spacy
-sqlalchemy==2.0.36
+sqlalchemy==2.0.37
     # via
     #   -r requirements.txt
     #   langchain
@@ -928,7 +928,7 @@ sqlparse==0.5.3
     #   -r requirements.txt
     #   django
     #   django-debug-toolbar
-srsly==2.5.0
+srsly==2.5.1
     # via
     #   -r requirements.txt
     #   confection
@@ -948,7 +948,7 @@ terminado==0.18.1
     #   jupyter-server
     #   jupyter-server-terminals
     #   notebook
-thinc==8.3.3
+thinc==8.2.5
     # via
     #   -r requirements.txt
     #   spacy
@@ -1023,6 +1023,8 @@ typing-extensions==4.12.2
     #   openai
     #   pydantic
     #   pydantic-core
+    #   pyopenssl
+    #   referencing
     #   selenium
     #   sqlalchemy
     #   typer
@@ -1044,7 +1046,7 @@ urllib3==2.3.0
     #   -r requirements.txt
     #   requests
     #   selenium
-virtualenv==20.28.1
+virtualenv==20.29.1
     # via pre-commit
 wasabi==1.1.3
     # via
@@ -1074,7 +1076,7 @@ websocket-client==1.8.0
     #   selenium
 werkzeug==3.1.3
     # via -r requirements.txt
-wrapt==1.17.0
+wrapt==1.17.2
     # via
     #   -r requirements.txt
     #   smart-open
