--- a/requirements.dev.in
+++ b/requirements.dev.in
@@ -27,7 +27,8 @@ jupyter-console==6.5.1
 jupyter-core==5.2.0
 notebook==6.5.4
 traitlets==5.9.0
-icecream
+# higher icecream versions cause pytest failures
+icecream<=2.1.3
 
 # build & reqs management
 invoke
