--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -21,7 +21,7 @@ annotated-types==0.7.0
     # via
     #   -r requirements.txt
     #   pydantic
-anthropic==0.43.1
+anthropic==0.44.0
     # via
     #   -r requirements.txt
     #   langchain-anthropic
@@ -81,7 +81,7 @@ cached-property==2.0.1
     # via
     #   -r requirements.txt
     #   genanki
-cachetools==5.5.0
+cachetools==5.5.1
     # via
     #   -r requirements.txt
     #   google-auth
@@ -198,7 +198,7 @@ ebooklib==0.18
     # via -r requirements.txt
 execnet==2.1.1
     # via pytest-xdist
-executing==2.1.0
+executing==2.2.0
     # via
     #   icecream
     #   stack-data
@@ -208,7 +208,7 @@ fastjsonschema==2.21.1
     # via nbformat
 fasttext==0.9.3
     # via -r requirements.txt
-filelock==3.16.1
+filelock==3.17.0
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -306,7 +306,7 @@ httplib2==0.22.0
     #   -r requirements.txt
     #   google-api-python-client
     #   google-auth-httplib2
-httpx==0.27.2
+httpx==0.28.1
     # via
     #   -r requirements.txt
     #   anthropic
@@ -328,7 +328,7 @@ hyperframe==6.0.1
     # via
     #   -r requirements.txt
     #   h2
-icecream==2.1.4
+icecream==2.1.3
     # via -r requirements.dev.in
 identify==2.6.6
     # via pre-commit
@@ -459,7 +459,7 @@ langcodes==3.5.0
     # via
     #   -r requirements.txt
     #   spacy
-langsmith==0.2.11
+langsmith==0.3.0
     # via
     #   -r requirements.txt
     #   langchain
@@ -597,9 +597,9 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.4.6
+ollama==0.4.7
     # via -r requirements.txt
-openai==1.59.9
+openai==1.60.0
     # via
     #   -r requirements.txt
     #   langchain-openai
@@ -753,7 +753,7 @@ pylint-django==2.6.1
     # via -r requirements.dev.in
 pylint-plugin-utils==0.8.2
     # via pylint-django
-pymdown-extensions==10.14
+pymdown-extensions==10.14.1
     # via
     #   -r requirements.dev.in
     #   mkdocs-material
@@ -899,7 +899,6 @@ sniffio==1.3.1
     #   -r requirements.txt
     #   anthropic
     #   anyio
-    #   httpx
     #   openai
     #   trio
 sortedcontainers==2.4.0
@@ -1086,3 +1085,7 @@ yarl==1.18.3
     # via
     #   -r requirements.txt
     #   aiohttp
+zstandard==0.23.0
+    # via
+    #   -r requirements.txt
+    #   langsmith
