--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ aiosignal==1.3.2
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anthropic==0.43.1
+anthropic==0.44.0
     # via langchain-anthropic
 anyio==4.8.0
     # via
@@ -31,7 +31,7 @@ blis==0.7.11
     # via thinc
 cached-property==2.0.1
     # via genanki
-cachetools==5.5.0
+cachetools==5.5.1
     # via google-auth
 catalogue==2.0.10
     # via
@@ -93,7 +93,7 @@ ebooklib==0.18
     # via -r requirements.in
 fasttext==0.9.3
     # via -r requirements.in
-filelock==3.16.1
+filelock==3.17.0
     # via huggingface-hub
 filetype==1.2.0
     # via langchain-google-genai
@@ -151,7 +151,7 @@ httplib2==0.22.0
     # via
     #   google-api-python-client
     #   google-auth-httplib2
-httpx==0.27.2
+httpx==0.28.1
     # via
     #   anthropic
     #   googletrans
@@ -213,7 +213,7 @@ langchain-text-splitters==0.3.5
     # via langchain
 langcodes==3.5.0
     # via spacy
-langsmith==0.2.11
+langsmith==0.3.0
     # via
     #   langchain
     #   langchain-community
@@ -256,9 +256,9 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.4.6
+ollama==0.4.7
     # via -r requirements.in
-openai==1.59.9
+openai==1.60.0
     # via
     #   -r requirements.in
     #   langchain-openai
@@ -383,7 +383,6 @@ sniffio==1.3.1
     # via
     #   anthropic
     #   anyio
-    #   httpx
     #   openai
 soupsieve==2.6
     # via beautifulsoup4
@@ -464,3 +463,5 @@ wrapt==1.17.2
     # via smart-open
 yarl==1.18.3
     # via aiohttp
+zstandard==0.23.0
+    # via langsmith
