--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,7 +49,7 @@ repos:
           --select=TRY,   # Exception handling
           --select=UP,    # Upgrade syntax
           --select=W,     # Warnings
-          '--ignore=S101,G004,TRY003,TRY300,TRY301,TRY400'  # Ignore docstring and `assert` detection
+          '--ignore=B019,S101,G004,TRY003,TRY300,TRY301,TRY400'  # Ignore docstring and `assert` detection
         ]
       - id: ruff
         name: ruff-format-tests
