https://github.com/andgineer/lexiflux/issues/68 public Book flag in non skip-auth mode

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -70,6 +70,7 @@ repos:
           "--namespace-packages",
           "--explicit-package-bases"
         ]
+        require_serial: true
         language: system
         types: [ python ]
         exclude: ^tests/
