--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
       - id: trailing-whitespace
         exclude_types: [ python ]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.8
+    rev: v0.11.2
     hooks:
       - id: ruff
         exclude: ^tests/
@@ -45,7 +45,7 @@ repos:
           --select=TRY,   # Exception handling
           --select=UP,    # Upgrade syntax
           --select=W,     # Warnings
-          '--ignore=B019,S101,G004,TRY003,TRY300,TRY301,TRY400'  # Ignore docstring and `assert` detection
+          '--ignore=B019,S101,S311,G004,TRY003,TRY300,TRY301,TRY400'  # Ignore docstring and `assert` detection
         ]
       - id: ruff
         name: ruff-format-tests
