--- a/requirements.in
+++ b/requirements.in
@@ -17,8 +17,11 @@ langchain-openai
 langchain_anthropic
 langchain_google_genai
 langchain_mistralai
+lxml_html_clean
 openai
 ollama
+readability-lxml
+markdownify
 EbookLib
 chardet
 transliterate
