--- a/requirements.txt
+++ b/requirements.txt
@@ -21,11 +21,12 @@ asgiref==3.8.1
     #   django-allauth
 attrs==25.3.0
     # via aiohttp
+babel==2.17.0
+    # via courlan
 beautifulsoup4==4.13.3
     # via
     #   -r requirements.in
     #   deep-translator
-    #   markdownify
 blis==0.7.11
     # via thinc
 cached-property==2.0.1
@@ -42,14 +43,16 @@ certifi==2025.1.31
     #   httpcore
     #   httpx
     #   requests
+    #   trafilatura
 cffi==1.17.1
     # via cryptography
 chardet==5.2.0
-    # via
-    #   -r requirements.in
-    #   readability-lxml
+    # via -r requirements.in
 charset-normalizer==3.4.1
-    # via requests
+    # via
+    #   htmldate
+    #   requests
+    #   trafilatura
 chevron==0.14.0
     # via genanki
 click==8.1.8
@@ -62,10 +65,10 @@ confection==0.1.5
     # via
     #   thinc
     #   weasel
+courlan==1.3.2
+    # via trafilatura
 cryptography==44.0.2
     # via pyopenssl
-cssselect==1.3.0
-    # via readability-lxml
 cymem==2.0.11
     # via
     #   preshed
@@ -73,6 +76,8 @@ cymem==2.0.11
     #   thinc
 dataclasses-json==0.6.7
     # via langchain-community
+dateparser==1.2.1
+    # via htmldate
 deep-translator==1.11.4
     # via -r requirements.in
 distro==1.9.0
@@ -134,6 +139,8 @@ h2==4.2.0
     # via httpx
 hpack==4.1.0
     # via h2
+htmldate==1.9.3
+    # via trafilatura
 httpcore==1.0.7
     # via httpx
 httpx==0.28.1
@@ -170,6 +177,8 @@ jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
     # via jsonpatch
+justext==3.0.2
+    # via trafilatura
 langchain==0.3.21
     # via
     #   -r requirements.in
@@ -208,16 +217,18 @@ language-data==1.3.0
 lxml==5.3.1
     # via
     #   ebooklib
+    #   htmldate
+    #   justext
     #   lxml-html-clean
-    #   readability-lxml
+    #   trafilatura
 lxml-html-clean==0.4.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   lxml
 marisa-trie==1.2.1
     # via language-data
 markdown-it-py==3.0.0
     # via rich
-markdownify==1.1.0
-    # via -r requirements.in
 markupsafe==3.0.2
     # via
     #   jinja2
@@ -295,7 +306,7 @@ pybind11==2.13.6
     # via fasttext
 pycparser==2.22
     # via cffi
-pydantic==2.11.0
+pydantic==2.11.1
     # via
     #   -r requirements.in
     #   anthropic
@@ -322,8 +333,14 @@ pyjwt==2.10.1
     # via -r requirements.in
 pyopenssl==25.0.0
     # via -r requirements.in
+python-dateutil==2.9.0.post0
+    # via
+    #   dateparser
+    #   htmldate
 python-dotenv==1.1.0
     # via pydantic-settings
+pytz==2025.2
+    # via dateparser
 pyyaml==6.0.2
     # via
     #   genanki
@@ -331,10 +348,9 @@ pyyaml==6.0.2
     #   langchain
     #   langchain-community
     #   langchain-core
-readability-lxml==0.8.1
-    # via -r requirements.in
 regex==2024.11.6
     # via
+    #   dateparser
     #   nltk
     #   tiktoken
 requests==2.32.3
@@ -366,7 +382,7 @@ shellingham==1.5.4
 six==1.17.0
     # via
     #   ebooklib
-    #   markdownify
+    #   python-dateutil
     #   transliterate
 smart-open==7.1.0
     # via weasel
@@ -403,6 +419,8 @@ thinc==8.2.5
     # via spacy
 tiktoken==0.9.0
     # via langchain-openai
+tld==0.13
+    # via courlan
 tokenizers==0.21.1
     # via langchain-mistralai
 tqdm==4.67.1
@@ -411,6 +429,8 @@ tqdm==4.67.1
     #   nltk
     #   openai
     #   spacy
+trafilatura==2.0.0
+    # via -r requirements.in
 transliterate==1.10.2
     # via -r requirements.in
 typer==0.15.2
@@ -436,10 +456,16 @@ typing-inspect==0.9.0
     # via dataclasses-json
 typing-inspection==0.4.0
     # via pydantic
+tzlocal==5.3.1
+    # via dateparser
 unidecode==1.3.8
     # via -r requirements.in
 urllib3==2.3.0
-    # via requests
+    # via
+    #   courlan
+    #   htmldate
+    #   requests
+    #   trafilatura
 wasabi==1.1.3
     # via
     #   spacy
