--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,7 +4,7 @@ aiohappyeyeballs==2.6.1
     # via
     #   -r requirements.txt
     #   aiohttp
-aiohttp==3.11.14
+aiohttp==3.11.16
     # via
     #   -r requirements.txt
     #   langchain-community
@@ -12,9 +12,9 @@ aiosignal==1.3.2
     # via
     #   -r requirements.txt
     #   aiohttp
-allure-pytest==2.13.5
+allure-pytest==2.14.0
     # via -r requirements.dev.in
-allure-python-commons==2.13.5
+allure-python-commons==2.14.0
     # via allure-pytest
 annotated-types==0.7.0
     # via
@@ -75,7 +75,7 @@ beautifulsoup4==4.13.3
     #   nbconvert
 bleach==6.2.0
     # via nbconvert
-blis==0.7.11
+blis==1.2.1
     # via
     #   -r requirements.txt
     #   thinc
@@ -148,7 +148,7 @@ courlan==1.3.2
     # via
     #   -r requirements.txt
     #   trafilatura
-coverage==7.7.1
+coverage==7.8.0
     # via
     #   coveralls
     #   pytest-cov
@@ -189,13 +189,13 @@ distro==1.9.0
     #   -r requirements.txt
     #   anthropic
     #   openai
-django==5.1.7
+django==5.2
     # via
     #   -r requirements.txt
     #   django-allauth
     #   django-debug-toolbar
     #   django-extensions
-django-allauth==65.6.0
+django-allauth==65.7.0
     # via -r requirements.txt
 django-debug-toolbar==5.1.0
     # via -r requirements.dev.in
@@ -239,7 +239,7 @@ frozenlist==1.5.0
     #   -r requirements.txt
     #   aiohttp
     #   aiosignal
-fsspec==2025.3.0
+fsspec==2025.3.2
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -267,7 +267,7 @@ googleapis-common-protos==1.69.2
     #   grpcio-status
 googletrans==4.0.2
     # via -r requirements.txt
-griffe==1.7.0
+griffe==1.7.2
     # via mkdocstrings-python
 grpcio==1.71.0
     # via
@@ -313,7 +313,7 @@ httpx-sse==0.4.0
     #   -r requirements.txt
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.29.3
+huggingface-hub==0.30.1
     # via
     #   -r requirements.txt
     #   tokenizers
@@ -424,15 +424,15 @@ justext==3.0.2
     # via
     #   -r requirements.txt
     #   trafilatura
-langchain==0.3.21
+langchain==0.3.23
     # via
     #   -r requirements.txt
     #   langchain-community
 langchain-anthropic==0.3.10
     # via -r requirements.txt
-langchain-community==0.3.20
+langchain-community==0.3.21
     # via -r requirements.txt
-langchain-core==0.3.49
+langchain-core==0.3.51
     # via
     #   -r requirements.txt
     #   langchain
@@ -446,9 +446,9 @@ langchain-google-genai==2.1.2
     # via -r requirements.txt
 langchain-mistralai==0.2.10
     # via -r requirements.txt
-langchain-openai==0.3.11
+langchain-openai==0.3.12
     # via -r requirements.txt
-langchain-text-splitters==0.3.7
+langchain-text-splitters==0.3.8
     # via
     #   -r requirements.txt
     #   langchain
@@ -456,7 +456,7 @@ langcodes==3.5.0
     # via
     #   -r requirements.txt
     #   spacy
-langsmith==0.3.19
+langsmith==0.3.24
     # via
     #   -r requirements.txt
     #   langchain
@@ -466,7 +466,7 @@ language-data==1.3.0
     # via
     #   -r requirements.txt
     #   langcodes
-lxml==5.3.1
+lxml==5.3.2
     # via
     #   -r requirements.txt
     #   ebooklib
@@ -536,17 +536,17 @@ mkdocs-awesome-pages-plugin==2.10.1
     # via -r requirements.dev.in
 mkdocs-get-deps==0.2.0
     # via mkdocs
-mkdocs-material==9.6.9
+mkdocs-material==9.6.11
     # via -r requirements.dev.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
-mkdocstrings==0.29.0
+mkdocstrings==0.29.1
     # via
     #   -r requirements.dev.in
     #   mkdocstrings-python
-mkdocstrings-python==1.16.8
+mkdocstrings-python==1.16.10
     # via mkdocstrings
-multidict==6.2.0
+multidict==6.3.2
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -603,7 +603,7 @@ numpy==1.26.4
     #   thinc
 ollama==0.4.7
     # via -r requirements.txt
-openai==1.69.0
+openai==1.70.0
     # via
     #   -r requirements.txt
     #   langchain-openai
@@ -713,7 +713,7 @@ pycparser==2.22
     # via
     #   -r requirements.txt
     #   cffi
-pydantic==2.11.1
+pydantic==2.11.2
     # via
     #   -r requirements.txt
     #   anthropic
@@ -730,7 +730,7 @@ pydantic==2.11.1
     #   spacy
     #   thinc
     #   weasel
-pydantic-core==2.33.0
+pydantic-core==2.33.1
     # via
     #   -r requirements.txt
     #   pydantic
@@ -774,9 +774,9 @@ pytest==8.3.5
     #   pytest-cov
     #   pytest-django
     #   pytest-xdist
-pytest-cov==6.0.0
+pytest-cov==6.1.1
     # via -r requirements.dev.in
-pytest-django==4.10.0
+pytest-django==4.11.1
     # via -r requirements.dev.in
 pytest-xdist==3.6.1
     # via -r requirements.dev.in
@@ -815,7 +815,7 @@ pyyaml==6.0.2
     #   pyyaml-env-tag
 pyyaml-env-tag==0.1
     # via mkdocs
-pyzmq==26.3.0
+pyzmq==26.4.0
     # via
     #   ipykernel
     #   jupyter-client
@@ -860,7 +860,7 @@ rfc3986-validator==0.1.1
     # via
     #   jsonschema
     #   jupyter-events
-rich==13.9.4
+rich==14.0.0
     # via
     #   -r requirements.txt
     #   typer
@@ -872,7 +872,9 @@ rsa==4.9
     # via
     #   -r requirements.txt
     #   google-auth
-selenium==4.30.0
+selectolax==0.3.28
+    # via -r requirements.txt
+selenium==4.31.0
     # via -r requirements.dev.in
 send2trash==1.8.3
     # via
@@ -913,7 +915,7 @@ soupsieve==2.6
     # via
     #   -r requirements.txt
     #   beautifulsoup4
-spacy==3.7.5
+spacy==3.8.5
     # via -r requirements.txt
 spacy-legacy==3.0.12
     # via
@@ -942,7 +944,7 @@ srsly==2.5.1
     #   weasel
 stack-data==0.6.3
     # via ipython
-tenacity==9.0.0
+tenacity==9.1.2
     # via
     #   -r requirements.txt
     #   langchain-community
@@ -952,7 +954,7 @@ terminado==0.18.1
     #   jupyter-server
     #   jupyter-server-terminals
     #   notebook
-thinc==8.2.5
+thinc==8.3.4
     # via
     #   -r requirements.txt
     #   spacy
@@ -1019,7 +1021,7 @@ typer==0.15.2
     #   weasel
 types-python-dateutil==2.9.0.20241206
     # via arrow
-typing-extensions==4.13.0
+typing-extensions==4.13.1
     # via
     #   -r requirements.txt
     #   anthropic
@@ -1064,7 +1066,7 @@ urllib3==2.3.0
     #   requests
     #   selenium
     #   trafilatura
-virtualenv==20.29.3
+virtualenv==20.30.0
     # via pre-commit
 wasabi==1.1.3
     # via
@@ -1100,7 +1102,7 @@ wrapt==1.17.2
     #   smart-open
 wsproto==1.2.0
     # via trio-websocket
-yarl==1.18.3
+yarl==1.19.0
     # via
     #   -r requirements.txt
     #   aiohttp
