--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 #    uv pip compile requirements.in --output-file=requirements.txt
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.11.14
+aiohttp==3.11.16
     # via langchain-community
 aiosignal==1.3.2
     # via aiohttp
@@ -27,7 +27,7 @@ beautifulsoup4==4.13.3
     # via
     #   -r requirements.in
     #   deep-translator
-blis==0.7.11
+blis==1.2.1
     # via thinc
 cached-property==2.0.1
     # via genanki
@@ -84,12 +84,12 @@ distro==1.9.0
     # via
     #   anthropic
     #   openai
-django==5.1.7
+django==5.2
     # via
     #   -r requirements.in
     #   django-allauth
     #   django-extensions
-django-allauth==65.6.0
+django-allauth==65.7.0
     # via -r requirements.in
 django-extensions==3.2.3
     # via -r requirements.in
@@ -109,7 +109,7 @@ frozenlist==1.5.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2025.3.0
+fsspec==2025.3.2
     # via huggingface-hub
 genanki==0.13.1
     # via -r requirements.in
@@ -155,7 +155,7 @@ httpx-sse==0.4.0
     # via
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.29.3
+huggingface-hub==0.30.1
     # via tokenizers
 hyperframe==6.1.0
     # via h2
@@ -179,15 +179,15 @@ jsonpointer==3.0.0
     # via jsonpatch
 justext==3.0.2
     # via trafilatura
-langchain==0.3.21
+langchain==0.3.23
     # via
     #   -r requirements.in
     #   langchain-community
 langchain-anthropic==0.3.10
     # via -r requirements.in
-langchain-community==0.3.20
+langchain-community==0.3.21
     # via -r requirements.in
-langchain-core==0.3.49
+langchain-core==0.3.51
     # via
     #   -r requirements.in
     #   langchain
@@ -201,20 +201,20 @@ langchain-google-genai==2.1.2
     # via -r requirements.in
 langchain-mistralai==0.2.10
     # via -r requirements.in
-langchain-openai==0.3.11
+langchain-openai==0.3.12
     # via -r requirements.in
-langchain-text-splitters==0.3.7
+langchain-text-splitters==0.3.8
     # via langchain
 langcodes==3.5.0
     # via spacy
-langsmith==0.3.19
+langsmith==0.3.24
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
 language-data==1.3.0
     # via langcodes
-lxml==5.3.1
+lxml==5.3.2
     # via
     #   ebooklib
     #   htmldate
@@ -237,7 +237,7 @@ marshmallow==3.26.1
     # via dataclasses-json
 mdurl==0.1.2
     # via markdown-it-py
-multidict==6.2.0
+multidict==6.3.2
     # via
     #   aiohttp
     #   yarl
@@ -260,7 +260,7 @@ numpy==1.26.4
     #   thinc
 ollama==0.4.7
     # via -r requirements.in
-openai==1.69.0
+openai==1.70.0
     # via
     #   -r requirements.in
     #   langchain-openai
@@ -306,7 +306,7 @@ pybind11==2.13.6
     # via fasttext
 pycparser==2.22
     # via cffi
-pydantic==2.11.1
+pydantic==2.11.2
     # via
     #   -r requirements.in
     #   anthropic
@@ -323,7 +323,7 @@ pydantic==2.11.1
     #   spacy
     #   thinc
     #   weasel
-pydantic-core==2.33.0
+pydantic-core==2.33.1
     # via pydantic
 pydantic-settings==2.8.1
     # via langchain-community
@@ -367,10 +367,12 @@ requests==2.32.3
     #   weasel
 requests-toolbelt==1.0.0
     # via langsmith
-rich==13.9.4
+rich==14.0.0
     # via typer
 rsa==4.9
     # via google-auth
+selectolax==0.3.28
+    # via -r requirements.in
 setuptools==78.1.0
     # via
     #   fasttext
@@ -393,7 +395,7 @@ sniffio==1.3.1
     #   openai
 soupsieve==2.6
     # via beautifulsoup4
-spacy==3.7.5
+spacy==3.8.5
     # via -r requirements.in
 spacy-legacy==3.0.12
     # via spacy
@@ -411,11 +413,11 @@ srsly==2.5.1
     #   spacy
     #   thinc
     #   weasel
-tenacity==9.0.0
+tenacity==9.1.2
     # via
     #   langchain-community
     #   langchain-core
-thinc==8.2.5
+thinc==8.3.4
     # via spacy
 tiktoken==0.9.0
     # via langchain-openai
@@ -437,7 +439,7 @@ typer==0.15.2
     # via
     #   spacy
     #   weasel
-typing-extensions==4.13.0
+typing-extensions==4.13.1
     # via
     #   anthropic
     #   anyio
@@ -477,7 +479,7 @@ werkzeug==3.1.3
     # via -r requirements.in
 wrapt==1.17.2
     # via smart-open
-yarl==1.18.3
+yarl==1.19.0
     # via aiohttp
 zstandard==0.23.0
     # via langsmith
