--- a/requirements.txt
+++ b/requirements.txt
@@ -216,6 +216,7 @@ language-data==1.3.0
     # via langcodes
 lxml==5.3.2
     # via
+    #   -r requirements.in
     #   ebooklib
     #   htmldate
     #   justext
@@ -371,8 +372,6 @@ rich==14.0.0
     # via typer
 rsa==4.9
     # via google-auth
-selectolax==0.3.28
-    # via -r requirements.in
 setuptools==78.1.0
     # via
     #   fasttext
