--- a/requirements.txt
+++ b/requirements.txt
@@ -24,9 +24,7 @@ attrs==25.3.0
 babel==2.17.0
     # via courlan
 beautifulsoup4==4.13.3
-    # via
-    #   -r requirements.in
-    #   deep-translator
+    # via deep-translator
 blis==1.2.1
     # via thinc
 cached-property==2.0.1
@@ -91,7 +89,7 @@ django==5.2
     #   django-extensions
 django-allauth==65.7.0
     # via -r requirements.in
-django-extensions==3.2.3
+django-extensions==4.0
     # via -r requirements.in
 django-widget-tweaks==1.5.0
     # via -r requirements.in
@@ -155,7 +153,7 @@ httpx-sse==0.4.0
     # via
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.30.1
+huggingface-hub==0.30.2
     # via tokenizers
 hyperframe==6.1.0
     # via h2
@@ -207,7 +205,7 @@ langchain-text-splitters==0.3.8
     # via langchain
 langcodes==3.5.0
     # via spacy
-langsmith==0.3.24
+langsmith==0.3.26
     # via
     #   langchain
     #   langchain-community
@@ -261,7 +259,7 @@ numpy==1.26.4
     #   thinc
 ollama==0.4.7
     # via -r requirements.in
-openai==1.70.0
+openai==1.71.0
     # via
     #   -r requirements.in
     #   langchain-openai
