--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ env:
     -n auto
     --junitxml=pytest.xml
     --cov-report=term-missing:skip-covered
+    --cov-report=lcov:coverage.py.lcov
     --cov=lexiflux
     tests/
 
@@ -125,3 +126,16 @@ jobs:
     - name: Upload coverage data to coveralls.io
       if: always()
       uses: coverallsapp/github-action@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        files: coverage.py.lcov ./coverage/lcov.info
+        format: lcov
+        flag-name: unit-tests
+        parallel: true
+
+    - name: Finalize coverage reporting to coveralls.io
+      if: always()
+      uses: coverallsapp/github-action@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel-finished: true
