--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@
 #    uv pip compile requirements.in --output-file=requirements.txt
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.11.16
+aiohttp==3.11.18
     # via langchain-community
 aiosignal==1.3.2
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anthropic==0.49.0
+anthropic==0.51.0
     # via langchain-anthropic
 anyio==4.9.0
     # via
@@ -38,7 +38,7 @@ catalogue==2.0.10
     #   spacy
     #   srsly
     #   thinc
-certifi==2025.1.31
+certifi==2025.4.26
     # via
     #   httpcore
     #   httpx
@@ -48,14 +48,14 @@ cffi==1.17.1
     # via cryptography
 chardet==5.2.0
     # via -r requirements.in
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
     # via
     #   htmldate
     #   requests
     #   trafilatura
 chevron==0.14.0
     # via genanki
-click==8.1.8
+click==8.2.0
     # via
     #   nltk
     #   typer
@@ -67,7 +67,7 @@ confection==0.1.5
     #   weasel
 courlan==1.3.2
     # via trafilatura
-cryptography==44.0.2
+cryptography==44.0.3
     # via pyopenssl
 cymem==2.0.11
     # via
@@ -84,18 +84,18 @@ distro==1.9.0
     # via
     #   anthropic
     #   openai
-django==5.2
+django==5.2.1
     # via
     #   -r requirements.in
     #   django-allauth
     #   django-extensions
-django-allauth==65.7.0
+django-allauth==65.8.0
     # via -r requirements.in
 django-extensions==4.1
     # via -r requirements.in
 django-widget-tweaks==1.5.0
     # via -r requirements.in
-ebooklib==0.18
+ebooklib==0.19
     # via -r requirements.in
 fasttext==0.9.3
     # via -r requirements.in
@@ -113,11 +113,11 @@ fsspec==2025.3.2
     # via huggingface-hub
 genanki==0.13.1
     # via -r requirements.in
-google-ai-generativelanguage==0.6.17
+google-ai-generativelanguage==0.6.18
     # via langchain-google-genai
 google-api-core==2.24.2
     # via google-ai-generativelanguage
-google-auth==2.39.0
+google-auth==2.40.1
     # via
     #   google-ai-generativelanguage
     #   google-api-core
@@ -133,7 +133,7 @@ grpcio==1.71.0
     #   grpcio-status
 grpcio-status==1.62.3
     # via google-api-core
-h11==0.14.0
+h11==0.16.0
     # via httpcore
 h2==4.2.0
     # via httpx
@@ -141,7 +141,7 @@ hpack==4.1.0
     # via h2
 htmldate==1.9.3
     # via trafilatura
-httpcore==1.0.8
+httpcore==1.0.9
     # via httpx
 httpx==0.28.1
     # via
@@ -155,7 +155,7 @@ httpx-sse==0.4.0
     # via
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.30.2
+huggingface-hub==0.31.2
     # via tokenizers
 hyperframe==6.1.0
     # via h2
@@ -171,7 +171,7 @@ jiter==0.9.0
     # via
     #   anthropic
     #   openai
-joblib==1.4.2
+joblib==1.5.0
     # via nltk
 jsonpatch==1.33
     # via langchain-core
@@ -179,15 +179,15 @@ jsonpointer==3.0.0
     # via jsonpatch
 justext==3.0.2
     # via trafilatura
-langchain==0.3.23
+langchain==0.3.25
     # via
     #   -r requirements.in
     #   langchain-community
-langchain-anthropic==0.3.12
+langchain-anthropic==0.3.13
     # via -r requirements.in
-langchain-community==0.3.21
+langchain-community==0.3.24
     # via -r requirements.in
-langchain-core==0.3.54
+langchain-core==0.3.59
     # via
     #   -r requirements.in
     #   langchain
@@ -197,30 +197,31 @@ langchain-core==0.3.54
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.1.3
+langchain-google-genai==2.1.4
     # via -r requirements.in
 langchain-mistralai==0.2.10
     # via -r requirements.in
-langchain-openai==0.3.14
+langchain-openai==0.3.16
     # via -r requirements.in
 langchain-text-splitters==0.3.8
     # via langchain
 langcodes==3.5.0
     # via spacy
-langsmith==0.3.32
+langsmith==0.3.42
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
 language-data==1.3.0
     # via langcodes
-lxml==5.3.2
+lxml==5.4.0
     # via
     #   -r requirements.in
     #   ebooklib
     #   htmldate
     #   justext
     #   lxml-html-clean
+    #   pagesmith
     #   trafilatura
 lxml-html-clean==0.4.2
     # via
@@ -247,7 +248,7 @@ murmurhash==1.0.12
     #   preshed
     #   spacy
     #   thinc
-mypy-extensions==1.0.0
+mypy-extensions==1.1.0
     # via typing-inspect
 nltk==3.9.1
     # via -r requirements.in
@@ -261,11 +262,11 @@ numpy==1.26.4
     #   thinc
 ollama==0.4.8
     # via -r requirements.in
-openai==1.75.0
+openai==1.78.1
     # via
     #   -r requirements.in
     #   langchain-openai
-orjson==3.10.16
+orjson==3.10.18
     # via langsmith
 packaging==24.2
     # via
@@ -276,6 +277,8 @@ packaging==24.2
     #   spacy
     #   thinc
     #   weasel
+pagesmith==1.1.0
+    # via -r requirements.in
 preshed==3.0.9
     # via
     #   spacy
@@ -307,7 +310,7 @@ pybind11==2.13.6
     # via fasttext
 pycparser==2.22
     # via cffi
-pydantic==2.11.3
+pydantic==2.11.4
     # via
     #   -r requirements.in
     #   anthropic
@@ -324,7 +327,7 @@ pydantic==2.11.3
     #   spacy
     #   thinc
     #   weasel
-pydantic-core==2.33.1
+pydantic-core==2.33.2
     # via pydantic
 pydantic-settings==2.9.1
     # via langchain-community
@@ -372,7 +375,7 @@ rich==14.0.0
     # via typer
 rsa==4.9.1
     # via google-auth
-setuptools==78.1.0
+setuptools==80.4.0
     # via
     #   fasttext
     #   marisa-trie
@@ -392,7 +395,7 @@ sniffio==1.3.1
     #   anthropic
     #   anyio
     #   openai
-soupsieve==2.6
+soupsieve==2.7
     # via beautifulsoup4
 spacy==3.8.5
     # via -r requirements.in
@@ -434,7 +437,7 @@ trafilatura==2.0.0
     # via -r requirements.in
 transliterate==1.10.2
     # via -r requirements.in
-typer==0.15.2
+typer==0.15.3
     # via
     #   spacy
     #   weasel
@@ -461,7 +464,7 @@ typing-inspection==0.4.0
     #   pydantic-settings
 tzlocal==5.3.1
     # via dateparser
-unidecode==1.3.8
+unidecode==1.4.0
     # via -r requirements.in
 urllib3==2.4.0
     # via
