https://github.com/andgineer/lexiflux/issues/99  Calibre plugin

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,8 @@ exclude: |
       .venv/|
       ^tests/resources/|
       migrations/|
-      experiments/
+      experiments/|
+      lexiflux/calibre_plugin
   )
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
